--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -6,11 +6,9 @@
   .swiper-slide {
     text-align: center;
     font-size: 18px;
-    background: #fff;
+    /* background: #fff; */
 }
 
 .swiper-button-next, .swiper-button-prev {
     color: #FF1C0A;
-    height: 5px;
-  
 }
